--- a/donate/usdt.html
+++ b/donate/usdt.html
@@ -7,28 +7,28 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.5e5f7dc8.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.2d67afd0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.263d99ed.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.8423f7c0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6e240f58.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.27a76025.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.4a4df47e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.7f080a85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.1df1b2c7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/constants.f9b8c9b4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.dc2a2adc.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/constants.a6a828a1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.e8955297.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.d67f56e6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.41780cf4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.7500d6b3.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.160a5020.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.e0c1217a.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.334718bf.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/usdt"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/usdt"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.dd3dc935.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page.d7162e89.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/usdt"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/usdt"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
 		<div>
 
 
 <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
-<h1>usdt-trc20</h1>
+<h1>USDT (TRC20)</h1>
 <p class="svelte-bzs1vh"><span class="svelte-bzs1vh">TRkd7CLStZgtAcKiQywDFkX34m6y7jDMag</span>
 	<button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->
 	
@@ -75,7 +75,7 @@
 			
 			<script>
 				{
-					__sveltekit_1dxziez = {
+					__sveltekit_quqoi8 = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -85,10 +85,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.5e5f7dc8.js"),
-						import("../_app/immutable/entry/app.6e240f58.js")
+						import("../_app/immutable/entry/start.2d67afd0.js"),
+						import("../_app/immutable/entry/app.4a4df47e.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1dxziez.element, {
+						kit.start(app, __sveltekit_quqoi8.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
